manifests/model_server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: model-server
  template:
    metadata:
      labels:
        app: model-server
    spec:
      containers:
        - name: model-server
          image: model-server:latest
          imagePullPolicy: Never
          resources:
            limits:
              memory: "2048Mi"
              cpu: "4.0"
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: model-server-service
spec:
  selector:
    app: model-server
  ports:
    - port: 9000
      targetPort: 80
